Petites corrections sur les fichiers statiques et templates de Vigiboard. Utilisation des icones de GTK pour représenter la page d'accueil (Home), la recherche (Filter view) et la déconnexion (Log out).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@895 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/vigiboard_style.css
+++ b/src/vigilo/themes/public/vigiboard/css/vigiboard_style.css
@@ -71,6 +71,10 @@ tr.even {
 	background-color: #F0F0F0;
 }
 
+td.OK {
+    background-color: #73DE78;
+}
+
 td.Minor {
 	background-color: #FFFF00;
 }
@@ -81,10 +85,6 @@ td.Major {
 
 td.Critical {
 	background-color: #FF0000;
-}
-
-td.Cleared {
-	background-color: #73DE78;
 }
 
 td.MinorAck {
@@ -100,7 +100,7 @@ td.CriticalAck {
 	background-color: #FC9090;
 }
 
-td.ClearedAck {
+td.OKAck {
 	background-color: #A9EBAC;
 }
 
@@ -162,3 +162,8 @@ clear:both;
 	color: white
 }
 
+#HistoryDialog_initial_state,
+#HistoryDialog_current_state,
+#HistoryDialog_peak_state {
+    font-weight: bold;
+}
