--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -24,10 +24,10 @@
 
 		<td style="margin-left: 30px; float: right">
 			<a href="${tg.url('/')}">
-				<img src="${tg.url('/images/home.gif')}" alt="Home" title="Home" />
+				<img src="${tg.url('/images/home.png')}" alt="Home" title="Home" />
 			</a>
 			<a id="SearchLien" href="javascript:vigiboard_searchdialog()">
-				<img src="${tg.url('/images/filter.png')}" alt="Filter display" title="Filter display"/>
+				<img src="${tg.url('/images/search.png')}" alt="Filter display" title="Filter display"/>
 			</a>
 			<a href="${tg.url('/logout_handler')}">
 				<img src="${tg.url('/images/logout.png')}" alt="Log out" title="Log out"/>
