Mise à jour des styles et images de Vigiboard dans le thème en prévision de changements dans l'appli. Le app_cfg de vigilo-turbogears définit un peu plus de paramètres avec les valeurs du projet.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@962 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/vigiboard_style.css
+++ b/src/vigilo/themes/public/vigiboard/css/vigiboard_style.css
@@ -75,32 +75,24 @@ td.OK {
     background-color: #73DE78;
 }
 
-td.Minor {
+td.WARNING {
 	background-color: #FFFF00;
 }
 
-td.Major {
-	background-color: #FF8700;
-}
-
-td.Critical {
+td.CRITICAL {
 	background-color: #FF0000;
 }
 
-td.MinorAck {
+td.WARNING_Ack {
 	background-color: #FCFCA2;
 
 }
 
-td.MajorAck {
-	background-color: #FCCA90;
-}
-
-td.CriticalAck {
+td.CRITICAL_Ack {
 	background-color: #FC9090;
 }
 
-td.OKAck {
+td.OK_Ack {
 	background-color: #A9EBAC;
 }
 
