28/10/2009 - fla - maj template
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@991 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/link.html
+++ b/src/vigilo/themes/templates/vigimap/link.html
@@ -1,6 +1,6 @@
 <div xmlns:py="http://genshi.edgewall.org/">
   <p>Link between ${host1} and ${host2}</p>
   <p>Reference service&nbsp;: ${service}</p>
-  <p>Status&nbsp;: ${state}</p>
+  <p>Status&nbsp;: ${status1}</p>
   <p>img src= ${img} alt= ${alt} </p>
 </div>
