28/10/2009 - fla - maj template
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@994 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/host.html
+++ b/src/vigilo/themes/templates/vigimap/host.html
@@ -2,18 +2,18 @@
   <body>
     <p class="status ok">Tous les services sont ${status}</p>
     <ul class="tags">
-      <li py:for="tag_a in tags">
-        <img src="img/${tag_a[0]}.png" alt="${tag_a[1]}" /> ${tag_a[1]}
+      <li py:for="tag_a in result_t">
+        <img src="img/${tag_a.name}.png" alt="${tag_a.value}" /> ${tag_a.value}
       </li>
     </ul>
     <ul class="links">
-      <li py:for="link_a in links">
-        <a href="${link_a[0]}?${link_a[1]}" > ${link_a[2]}</a>
+      <li py:for="link_a in result_l">
+        <a href="${host}" > Evènements </a>
       </li>
     </ul>
     <ul class="maps">
-      <li py:for="map_a in maps">
-        <a href="?map=${map_a[0]}" > ${map_a[1]}</a>
+      <li py:for="map_a in result_m">
+        <a href="?map=${result_m.name}" > ${result_m.title}</a>
       </li>
     </ul>
     <p>Nom d'equipement&nbsp;: ${host}</p>
