--- a/src/vigilo/themes/templates/vigimap/host.html
+++ b/src/vigilo/themes/templates/vigimap/host.html
@@ -8,7 +8,7 @@
     </ul>
     <ul class="links">
       <li py:for="link_a in result_l">
-        <a href="${host}" > Evènements </a>
+        <a href="${result_l[link_a]}" > ${link_a} </a>
       </li>
     </ul>
     <ul class="maps">
