29/10/2009 - fla - fonction host.html - internationalisation tags
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1012 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/host.html
+++ b/src/vigilo/themes/templates/vigimap/host.html
@@ -3,7 +3,7 @@
     <p class="status ok">Tous les services sont ${status}</p>
     <ul class="tags">
       <li py:for="tag_a in result_t">
-        <img src="img/${tag_a.name}.png" alt="${tag_a.value}" /> ${tag_a.value}
+        <img src="img/${tag_a}.png" alt="${l_(result_t[tag_a])}" /> ${result_t[tag_a]}
       </li>
     </ul>
     <ul class="links">
