--- a/src/vigilo/themes/templates/vigimap/host.html
+++ b/src/vigilo/themes/templates/vigimap/host.html
@@ -3,7 +3,7 @@
     <p class="status ok">Tous les services sont ${status}</p>
     <ul class="tags">
       <li py:for="tag_a in result_t">
-        <img src="img/${tag_a}.png" alt="${l_(result_t[tag_a])}" /> ${result_t[tag_a]}
+        <img src="img/${tag_a}.png" alt="${l_(result_t[tag_a])}" /> ${l_(result_t[tag_a])}
       </li>
     </ul>
     <ul class="links">
