Les templates dans Turbogears ont accès à la configuration de Vigilo via la variable "settings". Le template "profile.html" de Vigicore a été mis à jour pour utiliser cette fonctionnalité : le formulaire de modification du mot de passe n'est affiché QUE lorsque Kerberos N'EST PAS utilisé (ie: lorsque l'authentification repose sur la base de données).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1036 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigicore/profile.html
+++ b/src/vigilo/themes/templates/vigicore/profile.html
@@ -14,7 +14,7 @@
 <body>
 <div id="profileform">
 <form action="${tg.url('/profile/update')}" method="post" class="niceform" style="width: 350px">
-    <fieldset>
+    <fieldset py:if="not settings.get('USE_KERBEROS', False)">
         <legend>Change password</legend>
 
         <div class="formbody">
