Vigimap: mise en conformité avec le document de backend.
Il reste encore du travail, mais je peux commencer l'intégration du frontend.


git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1042 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/host.html
+++ b/src/vigilo/themes/templates/vigimap/host.html
@@ -1,19 +1,19 @@
 <div xmlns:py="http://genshi.edgewall.org/">
   <body>
-    <p class="status ok">Tous les services sont ${status}</p>
+    <p class="status ${status.lower()}">${message}</p>
     <ul class="tags">
-      <li py:for="tag_a in result_t">
-        <img src="img/${tag_a}.png" alt="${l_(result_t[tag_a])}" /> ${l_(result_t[tag_a])}
+      <li py:for="tag in tags">
+        <img src="img/${tag}.png" alt="${l_(tag)}" /> ${l_(tag)}
       </li>
     </ul>
     <ul class="links">
-      <li py:for="link_a in result_l">
-        <a href="${result_l[link_a]}" > ${link_a} </a>
+      <li py:for="link in links">
+        <a href="${link[1]}" > ${link[0]}</a>
       </li>
     </ul>
     <ul class="maps">
-      <li py:for="map_a in result_m">
-        <a href="?map=${result_m.name}" > ${result_m.title}</a>
+      <li py:for="map in maps">
+        <a href="?map=${map[0]}" > ${map[1]}</a>
       </li>
     </ul>
     <p>Nom d'equipement&nbsp;: ${host}</p>
