--- a/src/vigilo/themes/templates/vigimap/legend.html
+++ b/src/vigilo/themes/templates/vigimap/legend.html
@@ -13,23 +13,25 @@
                 <dd>${l_("Critique")}</dd>
         </dl>
     </div>
-    <div id="legend-links">
+    <div id="legend-links" py:if="has_link">
         <h3>${l_("Liaisons")}&nbsp;:</h3>
         <dl>
-            <b py:for="ll_a in result_ll">
-              <p py:if="result_ll[ll_a].t_min == 'Inconnu'">
-                <dt style="background-color: #${result_ll[ll_a].f}; border: 1px solid ${result_ll[ll_a].f}"></dt>
-                  <dd>${result_ll[ll_a].t_min}</dd>
-              </p>
-              <p py:if="result_ll[ll_a].t_min != 'Inconnu' and result_ll[ll_a].t_min != '90%'">
-                <dt style="background-color: #${result_ll[ll_a].f}; border: 1px solid ${result_ll[ll_a].f}"></dt>
-                  <dd>${result_ll[ll_a].t_min} &rarr; ${result_ll[ll_a].t_max}</dd>
-              </p>
-              <p py:if="result_ll[ll_a].t_min == '90%'">
-                <dt style="background-color: #${result_ll[ll_a].f}; border: 1px solid ${result_ll[ll_a].f}"></dt>
-                  <dd>&lt; ${result_ll[ll_a].t_min}</dd>
-              </p>
-            </b>
+            <div py:for="i, link in enumerate(links)" py:strip="True">
+                <div py:choose="" py:strip="True">
+                    <p py:when="i == 0" py:strip="True">
+                      <dt style="background-color: ${link.f}; border: 1px solid ${link.s}"></dt>
+                        <dd>${link.t_min}</dd>
+                    </p>
+                    <p py:when="i == len(links) - 1" py:strip="True">
+                      <dt style="background-color: ${link.f}; border: 1px solid ${link.s}"></dt>
+                        <dd>&#8805; ${link.t_min}</dd>
+                    </p>
+                    <p py:otherwise="" py:strip="True">
+                      <dt style="background-color: ${link.f}; border: 1px solid ${link.s}"></dt>
+                        <dd>${link.t_min} &#8594; ${link.t_max}</dd>
+                    </p>
+                </div>
+            </div>
         </dl>
     </div>
 </div>
