--- a/src/vigilo/themes/templates/vigimap/link.html
+++ b/src/vigilo/themes/templates/vigimap/link.html
@@ -1,6 +1,6 @@
 <div xmlns:py="http://genshi.edgewall.org/">
-  <p>Link between ${host1} and ${host2}</p>
-  <p>Reference service&nbsp;: ${service}</p>
-  <p>Status&nbsp;: ${status1}</p>
-  <p>img src= ${img} alt= ${alt} </p>
+  <p>Link between ${from_node} and ${to_node}</p>
+  <p>Reference service&nbsp;: ${service} on ${host}</p>
+  <p>Status&nbsp;: ${status}</p>
+  <p><img src="${img}" alt="${alt}" /></p>
 </div>
