Dans le template de login, le focus va directement sur le champ permettant de saisir le nom d'utilisateur au chargement de la page.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1047 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/common/login.html
+++ b/src/vigilo/themes/templates/common/login.html
@@ -20,5 +20,14 @@
     <input type="submit" id="submit" value="Login" />
 </form>
 </div>
+
+<script type="text/javascript">
+window.onload = function () {
+    if (document.getElementById) {
+        var o = document.getElementById('login');
+        o.focus();
+    }
+}
+</script>
 </body>
 </html>
