Meilleure gestion du menu de gauche et de la légende
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1068 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -30,7 +30,7 @@ ul {
 
 #leftmenu h2 { margin-left: 0.8em; }
 
-#leftmenu h3 {
+#leftmenu .mapgroup {
     margin: 0px auto;
     border: 1px solid #aaa;
     background-color: #eee;
@@ -41,19 +41,22 @@ ul {
     list-style-type: none;
     margin-bottom: 0.5em;
 }
-#leftmenu li a {
+#leftmenu .map a {
     text-align: center;
     display: block;
     border: 1px solid #375E8A;
     background-color: #4F83BD;
     margin: 2px 0px;
 }
-#leftmenu li a:link,
-#leftmenu li a:visited,
-#leftmenu li a:hover,
-#leftmenu li a:active {
+#leftmenu .map a:link,
+#leftmenu .map a:visited {
     text-decoration: none;
     color: white;
+}
+#leftmenu .map a:hover,
+#leftmenu .map a:active {
+    text-decoration: none;
+    color: #ffcc66;
 }
 
 #leftmenu .obj {
