--- a/src/vigilo/themes/templates/vigiboard/vigiboard_event_table.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard_event_table.html
@@ -45,7 +45,7 @@
 
 	<tbody>
 		<py:for each="(event,class_tr,class_td_severity,class_td_date,img_fleche,img_statu,plugin) in events[1:]">
-		<tr py:attrs="class_tr">
+		<tr py:attrs="class_tr" py:with="cause=event.cause.first()">
 			<td style="padding: 3px;" py:attrs="class_td_severity">
 			    <a href="javascript:vigiboard_historydialog('${event.idaggregate}')" class="HistoryLien"><img src="${tg.url(img_fleche['src'])}" style="width:20px" alt="Details" title="Event details" /></a>
 		    </td>
@@ -55,15 +55,15 @@
 			 </td>
 			<td py:attrs="class_td_date" style="text-align:center">${event.priority}</td>
 			<td py:attrs="class_td_date" style="text-align:center">${event.occurrence}</td>
-			<td>${event.cause.hostname}</td>
-			<td>${event.cause.servicename}</td>
-			<td>${event.cause.message}</td>
+			<td>${cause.hostname}</td>
+			<td>${cause.servicename}</td>
+			<td>${cause.message}</td>
 			<td py:for="plug in plugin" py:attrs="plug[1]">${HTML(plug[0])}</td>
 			<td style="text-align: center"><a py:if="event.trouble_ticket is not None" href="${
 					tg.config['vigiboard_links.tt'] % {
 						'idaggregate': event.idaggregate,
-						'host': event.cause.hostname,
-						'service': event.cause.servicename,
+						'host': cause.hostname,
+						'service': cause.servicename,
 						'tt': event.trouble_ticket }}">[${event.trouble_ticket}]</a></td>
 			<td style="text-align: center"><img py:attrs="img_statu" py:if="img_statu != None" alt="Status" title="Event status"/></td>
 			<td py:attrs="class_td_date" style="padding: 0px;text-align: center"><a class="Edit_EventsLien" href="javascript:vigiboard_edit_eventdialog('${event.idaggregate}')"><img src="${tg.url('/images/icon_page_edit.png')}" alt="Edit" title="Edit this event"/></a></td>
