Traduction de VigiMap et des templates
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1099 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -17,9 +17,11 @@
         <script type="text/javascript" src="widgets/${widget}/${widget}.js"></script>
         <link rel="stylesheet" type="text/css" href="widgets/${widget}/${widget}.css" />
     </div>
+    <script type="text/javascript" src="i18n"></script>
 </head>
 
 <body>
+
 
     <div id="header">
         <h1>VigiMap<span id="maptitle"></span></h1>
