--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -239,3 +239,25 @@ canvas {
     margin-right: 0.5em;
 }
 
+/*
+.spinner {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    opacity: 0.9;
+    filter: alpha(opacity=90);
+    z-index: 999;
+    background: #fff;
+}
+.spinner-msg {
+    text-align: center;
+    font-weight: bold;
+}
+
+.spinner-img {
+    background: url(../images/loading.gif) no-repeat;
+    width: 24px;
+    height: 24px;
+    margin: 0 auto;
+}
+*/
