suppression des anciennes classes CSS pour les etats
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1122 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -118,19 +118,19 @@ ul {
 }
 
 
-.critical {
+.status-critical {
     background-color: #FF0000;
     border: 1px solid #C80000;
 }
-.warning {
+.status-warning {
     background-color: #FFFF00;
     border: 1px solid #C8C800;
 }
-.ok {
+.status-ok {
     background-color: #73DE78;
     border: 1px solid #5DB460;
 }
-.unknown {
+.status-unknown {
     background-color: #aaaaaa;
     border: 1px solid black;
 }
