Mise à jour des fichiers liés à Vigicore. Suppression des styles liés à Rum qui était restés dans les styles communs (ces styles ne sont plus utilisés).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1124 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigicore/admin/layout.html
+++ b/src/vigilo/themes/templates/vigicore/admin/layout.html
@@ -20,7 +20,7 @@ from genshi.input import XML
                 par ordre alphabétique croissant dans l'affichage de Rum. -->
           <py:with vars="res = sorted(resources, cmp=lambda x, y: cmp(app.names_for_resource(x)[1], app.names_for_resource(y)[1]))">
           <li py:for="r in res"
-              py:with="name=generate_label(app.names_for_resource(r)[1]); url=url_for(r, _memory=False)">
+              py:with="name=app.names_for_resource(r)[1]; url=url_for(r, _memory=False)">
               <a href="${url}" class="${request.routes['resource'] is r and 'active' or None}">${name}</a>
           </li>
           </py:with>
