--- a/src/vigilo/themes/templates/vigicore/sidebars.html
+++ b/src/vigilo/themes/templates/vigicore/sidebars.html
@@ -6,7 +6,7 @@
   <div id="sb_top" class="sidebar">
       <h2>Vigilo interfaces</h2>
       <ul class="links">
-        <li><a href="${tg.config['url.vigiboard']}">Vigiboard</a>
+        <li><a href="${tg.config['url.vigiboard']}">VigiBoard</a>
             - See the latest alerts</li>
       </ul>
   </div>
