Oups, oublié cette adaptation (voir r1121)
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1128 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/node.html
+++ b/src/vigilo/themes/templates/vigimap/node.html
@@ -1,5 +1,5 @@
 <div xmlns:py="http://genshi.edgewall.org/">
-    <p class="status ${status.lower()}">${message}</p>
+    <p class="status status-${status.lower()}">${message}</p>
     <ul class="tags">
         <li py:for="tag in tags">
             <img src="images/${tag}.png" alt="${l_(tag)}" /> ${l_(tag)}
