--- a/src/vigilo/themes/templates/vigimap/legend.html
+++ b/src/vigilo/themes/templates/vigimap/legend.html
@@ -3,13 +3,13 @@
     <div id="legend-elements">
         <h3>${l_("Elements")}&nbsp;:</h3>
         <dl>
-            <dt class="unknown"></dt>
+            <dt class="status-unknown"></dt>
                 <dd>${l_("Unknown")}</dd>
-            <dt class="ok"></dt>
+            <dt class="status-ok"></dt>
                 <dd>${l_("OK")}</dd>
-            <dt class="warning"></dt>
+            <dt class="status-warning"></dt>
                 <dd>${l_("Warning")}</dd>
-            <dt class="critical"></dt>
+            <dt class="status-critical"></dt>
                 <dd>${l_("Critical")}</dd>
         </dl>
     </div>
