tburguie: modif concernant le dossier contenant le script vigigraph.js
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1172 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigigraph/index.html
+++ b/src/vigilo/themes/templates/vigigraph/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Loading VigiGraph...</title>
-    <script type="text/javascript" src="script/vigigraph.js"></script>
+    <script type="text/javascript" src="js/vigigraph.js"></script>
     <!-- <link rel="search" type="application/opensearchdescription+xml" title="Vigigraph search" href="Vigigraph.py/getOpenSearch"/> -->
     <style type="text/css"><!--@import url(css/style.css); --></style>
   </head>
