VigiMap :  * Bug dans les détails d'un hôte  * Meilleure gestion du logging Javascript  * Réglage du titre de la fenêtre
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1191 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -5,13 +5,14 @@
       lang="fr">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>VigiMap</title>
     <!--[if IE]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
     <link rel="stylesheet" type="text/css" href="css/jxlib/jxtheme.uncompressed.css" />
     <style type="text/css">@import "css/map.css";</style>
-    <script type="text/javascript">Jx = { baseURL: 'js'; }</script>
     <script type="text/javascript" src="js/mootools.js"></script>
     <script type="text/javascript" src="js/mootools-more.js"></script>
     <script type="text/javascript" src="js/jxlib.js"></script>
+    <script type="text/javascript">Jx.baseURL = 'js';</script>
     <script type="text/javascript" src="js/map.js"></script>
     <div py:for="widget in widgets" py:strip="True">
         <script type="text/javascript" src="widgets/${widget}/${widget}.js"></script>
