Contournement de la lenteur de canvas quand on ne loggue rien
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1248 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -11,6 +11,7 @@
     <style type="text/css">@import "css/map.css";</style>
     <script type="text/javascript" src="js/mootools.js"></script>
     <script type="text/javascript" src="js/mootools-more.js"></script>
+    <script type="text/javascript" src="js/drag.ghost.js"></script>
     <script type="text/javascript" src="js/jxlib.js"></script>
     <script type="text/javascript">Jx.baseURL = 'js';</script>
     <script type="text/javascript" src="js/map.js"></script>
