Deplacement des icones et des tags
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1312 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/node.html
+++ b/src/vigilo/themes/templates/vigimap/node.html
@@ -2,7 +2,7 @@
     <p class="status status-${status.lower()}">${message}</p>
     <ul class="tags">
         <li py:for="tag in tags">
-            <img src="images/${tag}.png" alt="${l_(tag)}" /> ${l_(tag)}
+            <img src="images/tags/${tag}.png" alt="${l_(tag)}" /> ${l_(tag)}
         </li>
     </ul>
     <ul class="links">
